Fixing mobile form overflow bug

--- a/public/src/app/main-content/main-content.component.css
+++ b/public/src/app/main-content/main-content.component.css
@@ -436,8 +436,8 @@ input {
   padding: 5%;
   width: 80vw;
   height: 80vh;
-  overflow-y: hidden;
-  overflow-x: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .modal {
